# pyformat-rs

./: Cargo.toml  README.md  difftest.py
.github/workflows/: ci.yml
src/: lib.rs
tests/: cpython_vectors.rs
